# AutomationCurveEditor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt  build-osx.sh  build-win-mingw32.sh  gen-xcode.sh
app_example/: CMakeLists.txt  ExampleApp.cpp
cmake/: Toolchain-mingw32.cmake
src/: CMakeLists.txt
src/data/: AutomationCurve.cpp  AutomationCurve.hpp  AutomationCurveCodec.cpp  AutomationCurveConverter.cpp  AutomationCurveEase.cpp  AutomationCurveEditor.cpp  CMakeLists.txt  CommonTypes.hpp  CommonTypesCodec.cpp  FVector.cpp  FVector.hpp  FVectorCodec.cpp  Sequence.cpp  Sequence.hpp
src/json/: AutomationCurveJSON.cpp  AutomationCurveJSON.hpp  CMakeLists.txt
src/view/: AutomationCurveWidget.cpp  AutomationCurveWidget.hpp  CMakeLists.txt  ColorSequenceWidget.cpp  ColorSequenceWidget.hpp  FVectorWidget.cpp  FVectorWidget.hpp  SequenceWidget.cpp  SequenceWidget.hpp  TimelineWidget.cpp  TimelineWidget.hpp  WidgetCommon.cpp  WidgetCommon.hpp
xcode-tests/CurveEditor-Tests/: CurveEditor_Tests.mm
xcode-tests/xcode-tests.xcodeproj/: project.pbxproj
xcode-tests/xcode-tests.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode-tests/xcode-tests.xcodeproj/project.xcworkspace/xcuserdata/njazz.xcuserdatad/: UserInterfaceState.xcuserstate
xcode-tests/xcode-tests.xcodeproj/xcuserdata/njazz.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode-tests/xcode-tests.xcodeproj/xcuserdata/njazz.xcuserdatad/xcschemes/: CurveEditor-Tests.xcscheme  xcschememanagement.plist
